build/errors/error12.txt
make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_output.o -MD -MP -MF .deps/hip-hip_output.Tpo -c -o hip-hip_output.o `test -f 'protocol/hip_output.c' || echo './'`protocol/hip_output.c
mv -f .deps/hip-hip_output.Tpo .deps/hip-hip_output.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_status.o -MD -MP -MF .deps/hip-hip_status.Tpo -c -o hip-hip_status.o `test -f 'protocol/hip_status.c' || echo './'`protocol/hip_status.c
mv -f .deps/hip-hip_status.Tpo .deps/hip-hip_status.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_util.o -MD -MP -MF .deps/hip-hip_util.Tpo -c -o hip-hip_util.o `test -f 'util/hip_util.c' || echo './'`util/hip_util.c
mv -f .deps/hip-hip_util.Tpo .deps/hip-hip_util.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_xml.o -MD -MP -MF .deps/hip-hip_xml.Tpo -c -o hip-hip_xml.o `test -f 'util/hip_xml.c' || echo './'`util/hip_xml.c
util/hip_xml.c: In function ‘parse_xml_hostid’:
util/hip_xml.c:270:33: error: dereferencing pointer to incomplete type ‘DSA {aka struct dsa_st}’
               BN_hex2bn(&hi->dsa->p, data);
                                 ^~
util/hip_xml.c:292:33: error: dereferencing pointer to incomplete type ‘RSA {aka struct rsa_st}’
               BN_hex2bn(&hi->rsa->n, data);
                                 ^~
Makefile:949: recipe for target 'hip-hip_xml.o' failed
make[3]: *** [hip-hip_xml.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2
